fix: adjust mobile hero glow horizontal alignment to 44%

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -298,13 +298,13 @@
 
   .bgGlow {
     top: 50%;
-    left: 50%;
+    left: 44%;
     width: 70%;
   }
 
   .bgPulse {
     top: 50%;
-    left: 50%;
+    left: 44%;
     width: 45%;
   }
 }
